--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,17 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+
+.image {
+  width: 400px;
+  margin-top: 2rem;
+}
+
+@media (max-width: 770px) {
+  .container {
+    margin: 0 10%;
+  }
+  .image{
+    width: 100%
+  }
+}
